<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/cartItem_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cartItem_foodName"
                android:textSize="15dp"
                android:text="@string/cartItem_foodName"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cartItem_foodCat"
                android:textSize="15dp"
                android:text="@string/cartItem_foodCat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cartItem_foodPrice"
                android:textSize="15dp"
                android:text="@string/cartItem_foodPrice"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cartItem_foodQty"
                android:textSize="15dp"
                android:text="@string/cartItem_foodQty"
                android:textStyle="bold"/>

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/cartItem_close"
                android:layout_marginLeft="240dp"
                android:background="@drawable/ic_cancel_black_24dp"/>

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>