<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FoodItemDetailsActivity"
    android:layout_margin="15dp"
    android:background="@drawable/rounded_corner_background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/foodDetails_scroller"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/foodDetails_title"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/foodTitle"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:id="@+id/foodDetials_image"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_launcher_background"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="Description"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/foodDetails_desc"
                    android:text="@string/foodDetails_desc"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:text="Price"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="RS."/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/foodDetails_price"
                    android:text="@string/foodDetails_price"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:padding="5dp" />

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/foodDetails_removeQty"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/ic_remove_circle_black_24dp" />

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:id="@+id/foodDetails_counter"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="01"
                        />

                    <Button
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:id="@+id/foodDetails_addQty"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/ic_add_circle_black_24dp" />

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:id="@+id/foodDetails_addCart"
                        android:text="Add tot Cart"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/rouded_corner_button"
                        android:textSize="15dp"
                        android:textColor="@android:color/white"
                        />


                </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/foodDetails_order"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rouded_corner_button"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:text="Order Now"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/rounded_corner_background2"
                android:id="@+id/address"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enter Delivery Address: "
                    android:textColor="@android:color/black"
                    android:padding="5dp"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textMultiLine" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/foodDetails_checkout"
                    android:text="Checkout"
                    android:background="@drawable/rouded_corner_button_primary"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="10dp"
                    android:textSize="20dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>